# mpd-dbcreate

./: README.md  meson.build  meson_options.txt
src/: DbMain.cxx  TagAny.cxx
src/command/: FileCommands.cxx
src/db/: meson.build
src/db/update/: Container.cxx  CueValidator.cxx  CueValidator.hxx  FilteredSongUpdate.cxx  FilteredSongUpdate.hxx  Playlist.cxx  UpdateSong.cxx
src/decoder/: DecoderList.cxx  Thread.cxx
src/decoder/plugins/: DffDecoderPlugin.cxx  DffDecoderPlugin.hxx  DvdaIsoDecoderPlugin.cxx  DvdaIsoDecoderPlugin.hxx  SacdIsoDecoderPlugin.cxx  meson.build
src/input/plugins/: meson.build
src/io/uring/: meson.build
src/lib/dvdaiso/: audio_stream.cpp  audio_stream.h  audio_stream_info.cpp  audio_stream_info.h  audio_track.cpp  audio_track.h  dvda_block.cpp  dvda_block.h  dvda_config.h  dvda_disc.cpp  dvda_disc.h  dvda_filesystem.cpp  dvda_filesystem.h  dvda_media.cpp  dvda_media.h  dvda_metabase.cpp  dvda_metabase.h  dvda_zone.cpp  dvda_zone.h  log_trunk.cpp  log_trunk.h  meson.build  mlp_audio_stream.cpp  mlp_audio_stream.h  pcm_audio_stream.cpp  pcm_audio_stream.h  stream_buffer.h
src/lib/dvdaiso/udf/: dvd_reader.h  dvd_udf.cpp  dvd_udf.h
src/lib/sacdiso/: meson.build  sacd_disc.cpp  sacd_disc.h  sacd_dsdiff.cpp  sacd_dsdiff.h  sacd_media.cpp  sacd_media.h  sacd_metabase.cpp
src/lib/sacdiso/libdstdec/: ct.h  ct_enc.h  fh.h  fr.h  segment.h  stream.h
src/lib/sacdiso/libdstdec/binding/: dst_decoder.cpp  (+3 more)
src/lib/systemd/: meson.build
src/mixer/plugins/: meson.build
src/output/: Registry.cxx
src/output/plugins/: meson.build
src/storage/: Configured.cxx
src/zeroconf/: meson.build
(+2 files in other folders)
